--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "imagekit": "^5.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1"
   },
