users photo is integrated

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ IMAGEKIT_PUBLIC_KEY=public_1swqSU7R3G1mAJWUmzl11pYhsRQ=
 IMAGEKIT_PRIVATE_KEY=private_l+rUNknPHupTG2QnZI5JknaqI8M=
 IMAGEKIT_URL_ENDPOINT=https://ik.imagekit.io/starfiitstorage/
 
+# Max upload size in MB for multer (affects /teams/members photo)
+UPLOAD_MAX_MB=20
+
